--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -803,7 +803,7 @@
                                         </th>
                                         <th pSortableColumn="PersonalPhone">Mobile</th>
                                         <th pSortableColumn="PersonalEmail">Email</th>
-                                        <th pSortableColumn="PresentAddressNote">Emergency Location</th>
+                                        <th pSortableColumn="PresentAddressNote">Emergency Contact</th>
                                     </tr>
                                 </ng-template>
 
